--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         style="width: 30px; height: 30px; cursor: pointer"
       />صفحه
     </button>
-
+    <a href="edit.html">صفحه ویرایش مخاطبین</a>
     <!-- The <script> tag is used to embed a client-side script (JavaScript). -->
     <!-- این تگ را استفاده کردم تا فایل جاوتاسکریپتم را به اچ تی ام ال متصل کنم تا رفتار صفحه ام را مورد کنترل قرار بدم -->
     <script src="index.js"></script>
